--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
             <div class="hero-image">
                 <img src="./images/jane.jpg" alt="">
             </div>
+            <div class="logo-bran">
+                <h1>Jane's
+                </h1>
+                <b>FASHION BLOG
+                </b>
+                <button>Subscribe</button>
+            </div>
         </div>
         <div id="content">
             <div class="main-content">
