--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -78,7 +79,7 @@
                         </h5>
                     </div>
                     <div class="main-image">
-                        <img src="./images/girl_hat.jpg" alt="">
+                        <img src="./images/girl_hat.jpg" alt="" data-aos="zoom-in-down">
                     </div>
                     <div class="text-about">
                         <p><b>More Hats!</b> I am crazy about hats these days. Some text about this blog entry.
@@ -112,7 +113,7 @@
                         </h5>
                     </div>
                     <div class="main-image">
-                        <img src="./images/man_hat.jpg" alt="">
+                        <img src="./images/man_hat.jpg" alt="" data-aos="zoom-in-down">
                     </div>
                     <div class="text-about">
                         <p><b>Hats!</b>
@@ -142,7 +143,7 @@
                         </h5>
                     </div>
                     <div class="main-image">
-                        <img src="./images/runway.jpg" alt="">
+                        <img src="./images/runway.jpg" alt="" data-aos="zoom-in-down">
                     </div>
                     <div class="text-about">
                         <p><b>Dont miss!</b> The runway in New York City this weekend is gonna be legendary!
@@ -167,7 +168,7 @@
             </div>
             <div class="sidebar">
                 <div class="author-box">
-                    <img src="./images/avatar_girl2.jpg" alt="" class="author-image">
+                    <img src="./images/avatar_girl2.jpg" alt="" class="author-image" data-aos="fade-up-left">
                     <div class="author-content">
                         <h4 class="author-name">My Name</h4>
                         <p class="author-description">Just me, myself and I, exploring the universe of uknownment. I
@@ -321,6 +322,10 @@
             <p>Powered by Nam Coder</p>
         </div>
     </div>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
